--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ testing/secret.key
 testing/fernet_key.py
 /Version Control/__pycache__
 Version Control/__pycache__/variables.cpython-312.pyc
+/Version Control/logs
+/Version Control/sessions
